[package]
name = "rusty_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# test-args are passed on to qemu
# only for test args
[package.metadata.bootimage]
# -serial stdio sends values through a serial port from the os to our local system
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-timeout = 300
# qemu success code is 33.
# rust think every code beside 0 
# is error
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
